samples/_failures_safe/1761340119_42839f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_06766962.c: In function ‘main’:
./samples/SAFE/__tmp_06766962.c:161:5: error: expected declaration or statement at end of input
  161 |     printf("\nToken stream:\n");
      |     ^~~~~~
